--- a/home.html
+++ b/home.html
@@ -6,9 +6,28 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/index.css">
     </head>
+
     <body>
-        
+        <header>
+            <nav>
+                <div class="logo">
+                    <img src="#" alt="logo for African Marketplace">
+                </div>
+                <div class="links">
+                    <a href="#">Log In</a>
+                    <a href="#">Sign Up</a>
+                    <a href="#">Meet Our Team</a>
+                </div>
+            </nav>
+        </header>
+
+        <section class="intro">
+            <div>
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
     </body>
 </html>
