--- a/home.html
+++ b/home.html
@@ -7,13 +7,16 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800|Rajdhani&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <header>
             <nav>
                 <div class="logo">
-                    <img src="#" alt="logo for African Marketplace">
+                    <h1><span>A</span>frican
+                        <br />
+                    <span>M</span>arketplace</h1>
                 </div>
                 <div class="links">
                     <a href="#">Log In</a>
