updated with new intro.less file

--- a/home.html
+++ b/home.html
@@ -14,9 +14,12 @@
         <header>
             <nav>
                 <div class="logo">
-                    <h1><span>A</span>frican
-                        <br />
-                    <span>M</span>arketplace</h1>
+                    <a href="#">
+                        <h1>
+                            <span>A</span>frican
+                            <br />
+                            <span>M</span>arketplace</h1>
+                    </a>
                 </div>
                 <div class="links">
                     <a href="#">Log In</a>
@@ -24,6 +27,13 @@
                     <a href="#">Meet Our Team</a>
                 </div>
             </nav>
+
+            <section class="top">
+                <div>
+                    <h1>Placeholder Text</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim eligendi debitis, non, consequuntur sed ducimus incidunt magni mollitia libero at quam similique aspernatur? Eum iusto quidem fugiat. Sapiente, tempore fugiat?</p>
+                </div>
+            </section>
         </header>
 
         <section class="intro">
