added some images to the project and minor changes to the navigation bar. still working on the rest of the page

--- a/home.html
+++ b/home.html
@@ -27,16 +27,23 @@
                     <a href="#">Meet Our Team</a>
                 </div>
             </nav>
-
-            <section class="top">
-                <div>
-                    <h1>Placeholder Text</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim eligendi debitis, non, consequuntur sed ducimus incidunt magni mollitia libero at quam similique aspernatur? Eum iusto quidem fugiat. Sapiente, tempore fugiat?</p>
-                </div>
-            </section>
         </header>
 
-        <section class="intro">
+        <section class="intro"> <!-- first section. introduction of website and mission. also partner information. -->
+            <div class="box">
+                <h1>Working with African Marketplace</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate voluptates modi ab. Perferendis non, quaerat iusto perspiciatis eum iste error numquam natus reprehenderit quod, amet tenetur consequatur eligendi. Aut.</p>
+            </div>
+        </section>
+
+        <section class="middle"> <!-- mention the features of the product we are selling. Emphasize on the importance/ our target audience -->
+            <div>
+                <h1></h1>
+                <p></p>
+            </div>
+        </section>
+
+        <section class="last"> <!-- start of the last section -->
             <div>
                 <h1></h1>
                 <p></p>
