still working on the website. added the top section including the box as well as some placeholder text

--- a/home.html
+++ b/home.html
@@ -18,7 +18,8 @@
                         <h1>
                             <span>A</span>frican
                             <br />
-                            <span>M</span>arketplace</h1>
+                            <span>M</span>arketplace
+                        </h1>
                     </a>
                 </div>
                 <div class="links">
@@ -31,8 +32,10 @@
 
         <section class="intro"> <!-- first section. introduction of website and mission. also partner information. -->
             <div class="box">
-                <h1>Working with African Marketplace</h1>
+                <h1>Welcome To African Marketplace</h1>
+                <hr />
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate voluptates modi ab. Perferendis non, quaerat iusto perspiciatis eum iste error numquam natus reprehenderit quod, amet tenetur consequatur eligendi. Aut.</p>
+                <button> <a href="http://sautiafrica.org/">Visit Sauri Africa</a> </button>
             </div>
         </section>
 
