finally got the background image to show up right, now all I need is the box centered. Also need to decide on concrete colors for the website

--- a/home.html
+++ b/home.html
@@ -22,6 +22,9 @@
                         </h1>
                     </a>
                 </div>
+                <div class="logo">
+                    <img src="images/logoicon.png" alt="picture of african continent">
+                </div>
                 <div class="links">
                     <a href="#">Log In</a>
                     <a href="#">Sign Up</a>
@@ -32,7 +35,7 @@
 
         <section class="intro"> <!-- first section. introduction of website and mission. also partner information. -->
             <div class="box">
-                <h1>Welcome To African Marketplace</h1>
+                <h2>Welcome To African Marketplace</h2>
                 <hr />
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate voluptates modi ab. Perferendis non, quaerat iusto perspiciatis eum iste error numquam natus reprehenderit quod, amet tenetur consequatur eligendi. Aut.</p>
                 <button> <a href="http://sautiafrica.org/">Visit Sauri Africa</a> </button>
@@ -40,6 +43,10 @@
         </section>
 
         <section class="middle"> <!-- mention the features of the product we are selling. Emphasize on the importance/ our target audience -->
+            <div class="mission">
+                <h2>What We Do</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit tenetur reiciendis saepe molestiae harum laborum necessitatibus libero consectetur aut nesciunt, aspernatur labore quibusdam cupiditate inventore minima rem. Consectetur, a sint!</p>
+            </div>
             <div>
                 <h1></h1>
                 <p></p>
