added in my footer. still working on the rest of the website

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
             
             <div class="first">
                 <div class="image">
-                    <img src="" alt="">
+                    <img src="images/africanItems.jpg" alt="">
                 </div>
                 <h3>Target Audience</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo sequi repellat repudiandae accusamus, iure obcaecati porro laboriosam placeat iusto quod? Neque accusantium vel, voluptas possimus sed reiciendis omnis nam repudiandae.</p>
@@ -72,7 +72,7 @@
                 <h3>How We Help</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam hic porro dolore numquam voluptas adipisci at consequuntur voluptate earum minus repellendus illo laborum illum commodi iusto, vel nam et repellat!</p>
             </div>
-            
+
         </section>
 
         <section class="last"> <!-- start of the last section -->
