added the last page I will need for my landing page. also added the images that I would like to use for the middle section. Although looks bare, will get some ideas from team members. Now working on the last section of the landing page.

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                 <h2>Welcome To African Marketplace</h2>
                 <hr />
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate voluptates modi ab. Perferendis non, quaerat iusto perspiciatis eum iste error numquam natus reprehenderit quod, amet tenetur consequatur eligendi. Aut.</p>
-                <button> <a href="http://sautiafrica.org/">Visit Sauri Africa</a> </button>
+                <button class="myButton"> <a href="http://sautiafrica.org/">Visit Sauri Africa</a> </button cl>
             </div>
         </section>
 
@@ -51,26 +51,34 @@
             
             <div class="first">
                 <div class="image">
-                    <img src="images/africanItems.jpg" alt="">
+                    <img src="images/africanWomen.jpg" alt="African women in a group smiling and looking happy.">
                 </div>
-                <h3>Target Audience</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo sequi repellat repudiandae accusamus, iure obcaecati porro laboriosam placeat iusto quod? Neque accusantium vel, voluptas possimus sed reiciendis omnis nam repudiandae.</p>
+                <div class="target">
+                    <h3>Target Audience.</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo sequi repellat repudiandae accusamus, iure obcaecati porro laboriosam placeat iusto quod? Neque accusantium vel, voluptas possimus sed reiciendis omnis nam repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe vel tempora omnis labore ex nisi cumque architecto voluptatem illo repellat neque natus nulla dolor qui est eius quod, consequatur alias.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem numquam quisquam expedita rerum praesentium inventore suscipit, temporibus quibusdam sequi repellendus quo? Aspernatur commodi vel quis perspiciatis facilis ad laborum quisquam!</p>
+                </div>
             </div>
 
             <div class="second">
-                <h3>Product Features</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla iste nesciunt, distinctio illo dignissimos illum nemo repellendus cum odit maxime aliquam accusamus, dicta minus neque veritatis! Voluptate dicta sapiente saepe.</p>
+                <div class="target">
+                    <h3>Product Features.</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla iste nesciunt, distinctio illo dignissimos illum nemo repellendus cum odit maxime aliquam accusamus, dicta minus neque veritatis! Voluptate dicta sapiente saepe.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque et? Aperiam corporis ad perspiciatis alias deserunt sed ex et sit atque voluptate eligendi inventore optio itaque, voluptatum assumenda veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate quia alias nam voluptate esse sint sequi natus hic! Placeat eum nihil, error eius recusandae iusto deleniti eos id mollitia?</p>
+                </div>
                 <div class="image">
-                    <img src="" alt="">
+                    <img src="images/africanCrafts.jpg" alt="image of african products laid out on a table for purchase.">
                 </div>
             </div>
             
             <div class="third">
                 <div class="image">
-                    <img src="" alt="">
+                    <img src="images/africanWomanShop.jpg" alt="image of african woman purchasing produce, smiling at the camera.">
                 </div>
-                <h3>How We Help</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam hic porro dolore numquam voluptas adipisci at consequuntur voluptate earum minus repellendus illo laborum illum commodi iusto, vel nam et repellat!</p>
+                <div class="target">
+                    <h3>Our Role.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam hic porro dolore numquam voluptas adipisci at consequuntur voluptate earum minus repellendus illo laborum illum commodi iusto, vel nam et repellat! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae similique fugiat veniam recusandae mollitia, consectetur dolor harum corporis autem tempore sint. Aliquam nisi sint tempora doloremque? Provident temporibus commodi veniam?</p>
+                </div>
             </div>
 
         </section>
