just about done with the landing page. Everything is coming together. Now working on the content I want to display on the website

--- a/home.html
+++ b/home.html
@@ -60,6 +60,8 @@
                 </div>
             </div>
 
+            <hr />
+
             <div class="second">
                 <div class="target">
                     <h3>Product Features.</h3>
@@ -70,6 +72,8 @@
                     <img src="images/africanCrafts.jpg" alt="image of african products laid out on a table for purchase.">
                 </div>
             </div>
+
+            <hr />
             
             <div class="third">
                 <div class="image">
@@ -83,11 +87,65 @@
 
         </section>
 
-        <section class="last"> <!-- start of the last section -->
-            <div>
-                <h1></h1>
-                <p></p>
+        <section class="last"> <!-- start of the last section --> 
+            <h2>The Importance of What We Do</h2>
+
+            <div class="main">
+                <div class="info">
+                    <h3>Access To Critical Info</h3>
+                    <hr />
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea praesentium aperiam neque ullam alias quia vitae quisquam. Doloremque iure illum expedita iste, porro amet vero ipsa voluptatem quam, maxime quae.</p>
+                </div>
+
+                <div class="info">
+                    <h3>Ensuring Safety</h3>
+                    <hr />
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ducimus dignissimos sed iure ipsum, beatae eveniet? Nisi veniam exercitationem quasi dignissimos, sunt quae iusto enim harum repudiandae numquam, totam accusantium!</p>
+                </div>
+
+                <div class="info">
+                    <h3>Business Growth</h3>
+                    <hr />
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti cum blanditiis quo dignissimos tempora deleniti, expedita asperiores ducimus similique rerum vero enim laboriosam facere sunt quis! Sapiente sit recusandae corrupti?</p>
+                </div>
+
+                <div class="info">
+                    <h3>Education on Procedures</h3>
+                    <hr />
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, repellendus id. Debitis impedit autem aperiam adipisci perferendis fugit provident, veritatis placeat sint accusamus odio, nulla nihil assumenda illo quis! Esse.</p>
+                </div>
             </div>
+
+            <div class="social">
+                <h2>Stay up to date by following Sati East Africa Online: </h2>
+                <a href="http://www.twitter.com/sautiorg"><img src="images/TwitterIconSmall.png" alt="twitter icon">
+                </a>
+                <a href="https://www.facebook.com/sautiorg/"><img src="images/facebookIcon.png" alt="facebook icon">
+                </a>    
+            </div>
+
+        </section>
+
+        <section class="footer">
+            <div>
+                <div class="logo">
+                    <a href="#">
+                        <h1>
+                            <span>A</span>frican
+                            <br />
+                            <span>M</span>arketplace
+                        </h1>
+                    </a>
+                </div>
+                <div class="logo">
+                    <img src="images/logoicon.png" alt="picture of african continent">
+                </div>
+                <div class="links">
+                    <a href="#">Log In</a>
+                    <a href="#">Sign Up</a>
+                    <a href="#">Meet Our Team</a>
+                </div>
+            </div>    
         </section>
     </body>
 </html>
