ready to add actual information to my website. design nearly done, just working on the footer

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
             
             <div class="first">
                 <div class="image">
-                    <img src="images/africanWomen.jpg" alt="African women in a group smiling and looking happy.">
+                    <img src="images/africanMarket.jpg" alt="African women in a group smiling and looking happy.">
                 </div>
                 <div class="target">
                     <h3>Target Audience.</h3>
@@ -116,36 +116,31 @@
                 </div>
             </div>
 
-            <div class="social">
-                <h2>Stay up to date by following Sati East Africa Online: </h2>
-                <a href="http://www.twitter.com/sautiorg"><img src="images/TwitterIconSmall.png" alt="twitter icon">
-                </a>
-                <a href="https://www.facebook.com/sautiorg/"><img src="images/facebookIcon.png" alt="facebook icon">
-                </a>    
-            </div>
+            
 
         </section>
 
         <section class="footer">
-            <div>
-                <div class="logo">
-                    <a href="#">
-                        <h1>
-                            <span>A</span>frican
-                            <br />
-                            <span>M</span>arketplace
-                        </h1>
-                    </a>
-                </div>
+            <div class="bttm">
                 <div class="logo">
                     <img src="images/logoicon.png" alt="picture of african continent">
                 </div>
-                <div class="links">
-                    <a href="#">Log In</a>
-                    <a href="#">Sign Up</a>
-                    <a href="#">Meet Our Team</a>
+
+                <div class="link">
+                        <a href="#"> Terms and Conditions
+                        </a>
+                        <a href="#"> Company Info
+                        </a>
+                        <p>© 2020 <span>Afrikan Market Place</span>. AllRights Reserved</p>
                 </div>
-            </div>    
+
+                <div class="social">
+                    <a href="http://www.twitter.com/sautiorg"><img src="images/twitterIcon.png" alt="twitter icon">
+                    </a>
+                    <a href="https://www.facebook.com/sautiorg/"><img src="images/facebookIcon.png" alt="facebook icon">
+                    </a>    
+                </div>
+            </div>   
         </section>
     </body>
 </html>
