added the finishing touches and closer to color/font choices. Just have to mainly work on the footer and get the mobile/tablet views up and going

--- a/home.html
+++ b/home.html
@@ -34,6 +34,9 @@
         </header>
 
         <section class="intro"> <!-- first section. introduction of website and mission. also partner information. -->
+            <div>
+                content: "";
+            </div>
             <div class="box">
                 <h2>Welcome To African Marketplace</h2>
                 <hr />
@@ -122,20 +125,23 @@
 
         <section class="footer">
             <div class="bttm">
-                <div class="logo">
+                <div class="bottomContent logo">
                     <img src="images/logoicon.png" alt="picture of african continent">
                 </div>
 
-                <div class="link">
+                <div class="bottomContent links">
                         <a href="#"> Terms and Conditions
                         </a>
                         <a href="#"> Company Info
                         </a>
-                        <p>© 2020 <span>Afrikan Market Place</span>. AllRights Reserved</p>
                 </div>
 
-                <div class="social">
-                    <a href="http://www.twitter.com/sautiorg"><img src="images/twitterIcon.png" alt="twitter icon">
+                <div class="copyright">
+                    <p>© 2020 <span>Afrikan Market Place</span>. All Rights Reserved</p>
+                </div>
+
+                <div class="bottomContent social">
+                    <a href="http://www.twitter.com/sautiorg" class="twitter"><img src="images/twitterIcon.png" alt="twitter icon">
                     </a>
                     <a href="https://www.facebook.com/sautiorg/"><img src="images/facebookIcon.png" alt="facebook icon">
                     </a>    
