--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 
         <section class="intro"> <!-- first section. introduction of website and mission. also partner information. -->
             <div>
-                content: "";
+                <p>.</p>
             </div>
             <div class="box">
                 <h2>Welcome To African Marketplace</h2>
@@ -54,7 +54,7 @@
             
             <div class="first">
                 <div class="image">
-                    <img src="images/africanMarket.jpg" alt="African women in a group smiling and looking happy.">
+                    <img src="images/africanWomanShop.jpg" alt="African women in a group smiling and looking happy.">
                 </div>
                 <div class="target">
                     <h3>Target Audience.</h3>
@@ -72,7 +72,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque et? Aperiam corporis ad perspiciatis alias deserunt sed ex et sit atque voluptate eligendi inventore optio itaque, voluptatum assumenda veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate quia alias nam voluptate esse sint sequi natus hic! Placeat eum nihil, error eius recusandae iusto deleniti eos id mollitia?</p>
                 </div>
                 <div class="image">
-                    <img src="images/africanCrafts.jpg" alt="image of african products laid out on a table for purchase.">
+                    <img src="images/africanMarketplacePurchase.jpg" alt="image of african products laid out on a table for purchase.">
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
             
             <div class="third">
                 <div class="image">
-                    <img src="images/africanWomanShop.jpg" alt="image of african woman purchasing produce, smiling at the camera.">
+                    <img src="images/africanWoman.jpg" alt="image of african woman purchasing produce, smiling at the camera.">
                 </div>
                 <div class="target">
                     <h3>Our Role.</h3>
@@ -132,11 +132,13 @@
                 <div class="bottomContent links">
                         <a href="#"> Terms and Conditions
                         </a>
+                </div>
+                <div class="bottomContent links">
                         <a href="#"> Company Info
                         </a>
                 </div>
 
-                <div class="copyright">
+                <div class="bottomContent copyright">
                     <p>© 2020 <span>Afrikan Market Place</span>. All Rights Reserved</p>
                 </div>
 
