--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                 <div class="links">
                     <a href="#">Log In</a>
                     <a href="#">Sign Up</a>
-                    <a href="#">Meet Our Team</a>
+                    <a href="about.html">Meet Our Team</a>
                 </div>
             </nav>
         </header>
