mobile version of landing page is all but complete, give or take a few minor details. Should finish this up completely later on.

--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
             
             <div class="first">
                 <div class="image">
-                    <img src="images/africanWomanShop.jpg" alt="African women in a group smiling and looking happy.">
+                    <img src="images/africanWomen.jpg" alt="African women in a group smiling and looking happy.">
                 </div>
                 <div class="target">
                     <h3>Target Audience.</h3>
@@ -72,7 +72,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque et? Aperiam corporis ad perspiciatis alias deserunt sed ex et sit atque voluptate eligendi inventore optio itaque, voluptatum assumenda veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate quia alias nam voluptate esse sint sequi natus hic! Placeat eum nihil, error eius recusandae iusto deleniti eos id mollitia?</p>
                 </div>
                 <div class="image">
-                    <img src="images/africanMarketplacePurchase.jpg" alt="image of african products laid out on a table for purchase.">
+                    <img src="images/africanWomanShop.jpg" alt="image of african woman with their product for sale.">
                 </div>
             </div>
 
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="bottomContent copyright">
-                    <p>© 2020 <span>Afrikan Market Place</span>. All Rights Reserved</p>
+                    <p>© 2020 <span>African Market Place</span>. All Rights Reserved</p>
                 </div>
 
                 <div class="bottomContent social">
