landing page mobile site layout is finished! Now all I have to do is add relevant information and get rid of the lorem ipsum.

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="#">
+                    <a href="home.html">
                         <h1>
                             <span>A</span>frican
                             <br />
@@ -124,29 +124,25 @@
         </section>
 
         <section class="footer">
+            
             <div class="bttm">
-                <div class="bottomContent logo">
+                <div class="bottomContent bttm-logo">
                     <img src="images/logoicon.png" alt="picture of african continent">
                 </div>
 
-                <div class="bottomContent links">
-                        <a href="#"> Terms and Conditions
-                        </a>
-                </div>
-                <div class="bottomContent links">
-                        <a href="#"> Company Info
-                        </a>
-                </div>
-
-                <div class="bottomContent copyright">
+                <div class="bottomContent copyright bttm-link">
                     <p>© 2020 <span>African Market Place</span>. All Rights Reserved</p>
                 </div>
 
                 <div class="bottomContent social">
-                    <a href="http://www.twitter.com/sautiorg" class="twitter"><img src="images/twitterIcon.png" alt="twitter icon">
-                    </a>
-                    <a href="https://www.facebook.com/sautiorg/"><img src="images/facebookIcon.png" alt="facebook icon">
-                    </a>    
+                    <div class="twitter social-link">
+                        <a href="http://www.twitter.com/sautiorg" class="twitter"><img src="images/twitterIcon.png" alt="twitter icon">
+                        </a>
+                    </div>
+                    <div class="facebook social-link">
+                        <a href="https://www.facebook.com/sautiorg/"><img src="images/facebookIcon.png" alt="facebook icon">
+                        </a>
+                    </div>      
                 </div>
             </div>   
         </section>
