finished the mobile and tablet layout for my landing page.

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
             <div class="box">
                 <h2>Welcome To African Marketplace</h2>
                 <hr />
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate voluptates modi ab. Perferendis non, quaerat iusto perspiciatis eum iste error numquam natus reprehenderit quod, amet tenetur consequatur eligendi. Aut.</p>
+                <p>African Marketplace works closely with Sauti Africa to provide Mobile-based trade and market information platforms. Sauti Africa empowers small business owners, particularly women, to improve their business and economic opportunities to grow out of poverty. African Marketplace enables business owners to create listings for items they have for sale.</p>
                 <button class="myButton"> <a href="http://sautiafrica.org/">Visit Sauri Africa</a> </button cl>
             </div>
         </section>
@@ -48,7 +48,7 @@
         <section class="middle"> <!-- mention the features of the product we are selling. Emphasize on the importance/ our target audience -->
             <div class="mission">
                 <h2>Working With African Marketplace</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit tenetur reiciendis saepe molestiae harum laborum necessitatibus libero consectetur aut nesciunt, aspernatur labore quibusdam cupiditate inventore minima rem. Consectetur, a sint!</p>
+                <p>Our mission is to empower cross-border traders to exercise their rights as citizens of the EAC – able to trade legally, safely and profitably across borders. African Marketplace allows business owners to be able to get their products out to potential buyers. Using technology, we want to increase legal, safe and profitable trade in Africa.</p>
             </div>
             
             
@@ -58,8 +58,8 @@
                 </div>
                 <div class="target">
                     <h3>Target Audience.</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo sequi repellat repudiandae accusamus, iure obcaecati porro laboriosam placeat iusto quod? Neque accusantium vel, voluptas possimus sed reiciendis omnis nam repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe vel tempora omnis labore ex nisi cumque architecto voluptatem illo repellat neque natus nulla dolor qui est eius quod, consequatur alias.</p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem numquam quisquam expedita rerum praesentium inventore suscipit, temporibus quibusdam sequi repellendus quo? Aspernatur commodi vel quis perspiciatis facilis ad laborum quisquam!</p>
+                    <p>Cross-border trade is a major feature of African economies, as it creates jobs, contributes to food and energy security and alleviates poverty. We are here to connect East African women with products to sell with potential customers who want to purchase their products. </p>
+                    <p>Sauti Africa and African Markerplace are also looking to assist women looking to start or maintain their small businesses. There is a lot that goes into selling products, especially cross-border. Our main goal is to ensure these women are educated on all that is involved with selling their products in a safe manner.</p>
                 </div>
             </div>
 
@@ -68,10 +68,16 @@
             <div class="second">
                 <div class="target">
                     <h3>Product Features.</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla iste nesciunt, distinctio illo dignissimos illum nemo repellendus cum odit maxime aliquam accusamus, dicta minus neque veritatis! Voluptate dicta sapiente saepe.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, neque et? Aperiam corporis ad perspiciatis alias deserunt sed ex et sit atque voluptate eligendi inventore optio itaque, voluptatum assumenda veritatis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate quia alias nam voluptate esse sint sequi natus hic! Placeat eum nihil, error eius recusandae iusto deleniti eos id mollitia?</p>
+                    <p>With the power of technology, our service allows African women who use our services sell a variety of items, such as: 
+                        <ul>
+                            <li>- Animal products</li>
+                            <li>- Vegetables</li>
+                            <li>- Fruits</li>
+                            <li>- Cereals</li>
+                        </ul>
+                    <p>Our service allows women to sign up for a service that seeks to keep them safe and well informed. Sauti has gathered infomration on informal cross-border trade database that offers an expansive array of data points gathered from over 6500 cross-border traders on the Kenya/Ugandan/Rwandan borders. African Marketplace takes it a step futher to centralize this information for sellers and buyers.</p>
                 </div>
-                <div class="image">
+                <div class="image second-img">
                     <img src="images/africanWomanShop.jpg" alt="image of african woman with their product for sale.">
                 </div>
             </div>
@@ -84,38 +90,36 @@
                 </div>
                 <div class="target">
                     <h3>Our Role.</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam hic porro dolore numquam voluptas adipisci at consequuntur voluptate earum minus repellendus illo laborum illum commodi iusto, vel nam et repellat! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae similique fugiat veniam recusandae mollitia, consectetur dolor harum corporis autem tempore sint. Aliquam nisi sint tempora doloremque? Provident temporibus commodi veniam?</p>
+                    <p>African Marketplace uses the power of technology, namely cell phones, to make the process of selling and buying goods. African Marketplace allows users to search and see products to sell and even add their own items to see, if they wish. </p>
+                    <p>Our service allows users to filter by location, filter by price, access a rating system and even message other sellers/buyers! Our app is also great at allowing users a way to take payments and it protects buyers so they can dispute products. To keep our users fully informed at all times, our users are able to sign up for our mailing list.</p>
                 </div>
             </div>
 
         </section>
 
         <section class="last"> <!-- start of the last section --> 
-            <h2>The Importance of What We Do</h2>
+            <h2>African Marketplace works with Sauti to provide:</h2>
 
             <div class="main">
                 <div class="info">
                     <h3>Access To Critical Info</h3>
                     <hr />
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea praesentium aperiam neque ullam alias quia vitae quisquam. Doloremque iure illum expedita iste, porro amet vero ipsa voluptatem quam, maxime quae.</p>
+                    <p>Sauti means <em>"voice"</em> in Swahili and the goal is to empower cross-border traders to exercise their rights as citizens of the East African Community. In order to ensure safety and growth, Sauti works with civil society organizations to use data collected through their platform for evidence-based advocacy at community, national and regional levels.</p>
+                    <p>With Sauti's anonymous reporting mechanism, they can crowd-source data to map incidents of harassment and corruption at border crossings across East Africa. African Marketplace aims to assist with this work!</p>
                 </div>
 
                 <div class="info">
                     <h3>Ensuring Safety</h3>
                     <hr />
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ducimus dignissimos sed iure ipsum, beatae eveniet? Nisi veniam exercitationem quasi dignissimos, sunt quae iusto enim harum repudiandae numquam, totam accusantium!</p>
-                </div>
-
-                <div class="info">
-                    <h3>Business Growth</h3>
-                    <hr />
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti cum blanditiis quo dignissimos tempora deleniti, expedita asperiores ducimus similique rerum vero enim laboriosam facere sunt quis! Sapiente sit recusandae corrupti?</p>
+                    <p>Sauti and African Marketplace understand the challenges faced by business owners, particularly women, when dealing with cross-border trading. Ensuring safety is our top priority and we will ensure all of our users are equipped with the tools to safely and easily sell and buy products.</p>
+                    <p>Safety is such an importance that the EAC Gender Department offers training for Cross-Border trade. Sauti ensures that women are fully equipped with the tools they need to be successful business owners.</p>
                 </div>
 
                 <div class="info">
                     <h3>Education on Procedures</h3>
                     <hr />
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem culpa laudantium. Commodi aut, dolore unde nihil debitis illum animi fugiat sequi repellat excepturi ea placeat laboriosam deleniti ipsum cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, repellendus id. Debitis impedit autem aperiam adipisci perferendis fugit provident, veritatis placeat sint accusamus odio, nulla nihil assumenda illo quis! Esse.</p>
+                    <p>Safety is such an importance that the EAC Gender Department offers training for Cross-Border trade. Sauti ensures that women are fully equipped with the tools they need to be successful business owners.</p>
+                    <p>The GIZ-EAC Programme, which is about to start a phase of cooperation with the EAC, will integrate gender into all programme activities and ensure that women and youth are appropriately included in the various sectors. Especially our Incubator for Integration and Development in East Africa (IIDEA) will take a stand for women empowerment and change the focus of the project selection towards this global aim.</p>
                 </div>
             </div>
 
