just need to work on mobile site for about page

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800|Rajdhani|Raleway:800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800|Rajdhani|Raleway:800|Roboto:300i&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -41,7 +41,7 @@
                 <h2>Welcome To African Marketplace</h2>
                 <hr />
                 <p>African Marketplace works closely with Sauti Africa to provide Mobile-based trade and market information platforms. Sauti Africa empowers small business owners, particularly women, to improve their business and economic opportunities to grow out of poverty. African Marketplace enables business owners to create listings for items they have for sale.</p>
-                <button class="myButton"> <a href="http://sautiafrica.org/">Visit Sauri Africa</a> </button cl>
+                <button class="myButton"> <a href="http://sautiafrica.org/">Visit Sauti Africa</a> </button cl>
             </div>
         </section>
 
