just added another desktop option. will update font up next

--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>>
+<!DOCTYPE html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -104,7 +104,7 @@
             <div>
                 <p>Our team received a great deal of help from out Project Manager, <span>Jeremiah Tenbrink</span>, who has been instrumental to the development of <span class="african">African Marketplace</span>!
                 </p>
-                <p>A special 'thank you' to the folks at <a href="http://www.sautiafrica.org">Sauti Africa</a> for their hard work and dedication to building a more prosperous East Africa!</p>
+                <p>We are extremely appreciative of <a href="http://www.sautiafrica.org">Sauti Africa</a> for their hard work and dedication to building a more prosperous East Africa!</p>
             </div>
         </section>
         
