--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
-        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800|Rajdhani|Raleway:800|Roboto:300i&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,400i,800|Rajdhani:300,400,500|Raleway:400,500,800|Roboto:100,300,300i&display=swap" rel="stylesheet">
     </head>
 
     <body>
