--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/index-about.css">
-        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:800|Rajdhani|Raleway:800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:400,400i,800|Rajdhani:300,400,500|Raleway:400,500,800|Roboto:100,300,300i&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -25,9 +25,10 @@
                     <img src="images/logoicon.png" alt="picture of african continent">
                 </div>
                 <div class="links">
+                    <a href="home.html">Home</a>
                     <a href="#">Log In</a>
                     <a href="#">Sign Up</a>
-                    <a href="about.html">Meet Our Team</a>
+                    <a href="about.html" class="meet">Meet Our Team</a>
                 </div>
             </nav>
         </header>
