--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="links">
                     <a href="home.html">Home</a>
-                    <a href="#">Log In</a>
-                    <a href="#">Sign Up</a>
+                    <a href="https://africa-market-pt2-react.netlify.com/">Log In</a>
+                    <a href="https://africa-market-pt2-react.netlify.com/">Sign Up</a>
                     <a href="about.html" class="meet">Meet Our Team</a>
                 </div>
             </nav>
