--- a/home.html
+++ b/home.html
@@ -26,8 +26,8 @@
                     <img src="images/logoicon.png" alt="picture of african continent">
                 </div>
                 <div class="links">
-                    <a href="#">Log In</a>
-                    <a href="#">Sign Up</a>
+                    <a href="https://africa-market-pt2-react.netlify.com/">Log In</a>
+                    <a href="https://africa-market-pt2-react.netlify.com/">Sign Up</a>
                     <a href="about.html">Meet Our Team</a>
                 </div>
             </nav>
